--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <span>By</span>
   <Span class="myname">
     <a href="https://github.com/AderogbaAdedamola/">Aderogba Adedamola 
-      <img src="images/githubLight.png" width="30px" height="30px" id="githubLight" alt="github image">
-      <img src="images/githubDark.png" width="35px" height="35px" id="githubDark" alt="github image">
+      <img src="githubLight.png" width="30px" height="30px" id="githubLight" alt="github image">
+      <img src="githubDark.png" width="35px" height="35px" id="githubDark" alt="github image">
     </a>
   </Span>
 </footer>
