--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Contact Me</title>
-    <meta name="description" content="A form to help people to collaborate with." />
+    <meta name="description" content="A form to where people can send message to and collaborate with me." />
 <meta name="keywords" content="form, contact, collaborate," />
 <meta name="author" content="Aderogba Adedamola" />
 <meta property="og:author" content="Aderogba Adedamola" />
 <meta property="og:title" content=" Contact Me" />
-<meta property="og:description" content="A form to Aderogba Adedamola connect and collaborate with other developers." />
+<meta property="og:description" content="A form to make Aderogba Adedamola connect and collaborate with other developers." />
 <meta property="og:image" content="githubDark.png">
 <meta property="og:url" content="https://aderogbaadedamola.github.io/Contact-Me-/" />
  </head>
