--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
   <form action="https://formsubmit.co/aderogbaadedamola8@gmail.com" method = "POST" class="form">
     <center><h1>Contact Me</h1></center>
     <div class="input-container">
-      <input type="text" id="name" placeholder=" " required>
+      <input type="text" name="Name" id="name" placeholder=" " required>
       <label for="name">Full Name</label>
     </div>
 
     <div class="input-container">
-      <input type="email" id="email" placeholder=" " required>
+      <input type="email" name="Email" id="email" placeholder=" " required>
       <label for="email">Email Address</label>
     </div>
 
     <div class="input-container">
-      <input type="tel" id="phone" placeholder=" " required>
+      <input type="tel" name="Phone-Number" id="phone" placeholder=" " required>
       <label for="phone">Phone Number</label>
     </div>
     <div class="input-container">
